ボタンのテキスト、スタイルを変更

--- a/frontend/src/html/user/tasks/task_help.html
+++ b/frontend/src/html/user/tasks/task_help.html
@@ -15,9 +15,6 @@
                 main{
                     height: 80%;
                 }
-                /* footer{
-                    height: 30%;
-                } */
             }
             button {
                 -webkit-appearance: none;
@@ -159,26 +156,27 @@
             #countdown .text-red-500 {
                 font-size: 50px; /* カウントダウンの文字サイズ */
             }
-            /*戻るボタン、終わりボタンのスタイル*/
+            /*戻るボタン、手伝うボタンのスタイル*/
             .back-btn{
-                background-color: #3bc28e; /* ボタンの背景色 */
+                background-color: #4AB4A1; /* ボタンの背景色 */
                 border-bottom: 4px solid #FFA07A; /* 下線の色 */
                 box-shadow: 0.1em 0.1em 3px rgba(0, 0, 0, 0.5); /* 影の設定 */
                 width: 350px; 
                 height: 125px;
                 border: none;
-                border-radius: 30px;
+                border-radius: 50px;
                 font-size: 40px;
             }
-            .end-btn{
-                background-color: #FFCCC0; /* ボタンの背景色 */
+            .help-btn{
+                background-color: #BCE6FF; /* ボタンの背景色 */
                 border-bottom: 4px solid #FFA07A; /* 下線の色 */
                 box-shadow: 0.1em 0.1em 3px rgba(0, 0, 0, 0.5); /* 影の設定 */
                 width: 350px; 
                 height: 125px;
                 border: none;
-                border-radius: 30px;
+                border-radius: 50px;
                 font-size: 40px;
+                
             }
 
             
@@ -238,10 +236,10 @@
                     <p class="leading-normal tracking-widest" id="task-message">タスクに対するメッセージを表示</p>
                 </div>
             </div>
-            <!-- ボタン　-->>
+            <!-- ボタン　-->
             <div class="flex justify-between">
                 <button class="back-btn text-center mr-20">戻る</button>
-                <button class="end-btn text-center">終わり</button>
+                <button class="help-btn text-center">手伝う</button>
             </div>
         </main>
         <!-- script要素 -->
