--- a/frontend/src/html/user/tasks/task_help.html
+++ b/frontend/src/html/user/tasks/task_help.html
@@ -222,7 +222,7 @@
             
         </style>
     </head>
-    <body class="font-kiwi-maru">
+    <body class="font-kiwi-maru box-border">
         <!-- グレイレイヤー -->
         <div class="overlay">
         </div>
@@ -323,6 +323,7 @@
                 $('.js-btn').on('click', function () { // js-btnクラスをクリックすると、
                     $('.menu').toggleClass('open'); // メニューにopenクラスをつけ外しする
                     $('.btn-line').toggleClass('open'); // バーガーの線にopenクラスをつけ外しする
+                    $('.overlay').toggleClass('show'); // グレイレイヤーにshowクラスをつけ外しする
                 });
             });
             // サンプルデータ
