material-iconsのスタイル修正

--- a/frontend/src/html/user/tasks/task_info.html
+++ b/frontend/src/html/user/tasks/task_info.html
@@ -26,7 +26,7 @@
             h1 {
                 color: #4AB4A1;
             }
-            .material-icons {
+            main .material-icons {
                 font-size: 90px;
             }
             #status-message ,#task-message, #task-deadline {
