--- a/frontend/src/html/user/tasks/task_report.html
+++ b/frontend/src/html/user/tasks/task_report.html
@@ -6,6 +6,8 @@
         <!-- TODO がちめにpathきもいっファイルの場所かえようか -->
         <link rel="stylesheet" href="../../../css/hamburger_menu.css">
         <link rel="stylesheet" href="../../../css/user/tasks/task_report.css">
+        <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet"/>
         <style>
             body {
