adminのhomeページのサイドメニューに設定とログアウトボタンも下揃えた

--- a/frontend/src/html/admin/home.html
+++ b/frontend/src/html/admin/home.html
@@ -259,7 +259,7 @@
 
         <!-- メニューオーバーレイ -->
         <nav>
-            <ul class="menu text-left">
+            <ul class="menu text-left lex-1 flex flex-col">
                 <li class="menu-list"><a href="#"
                         class="text-9xl text-teal-500 pt-24 pb-2 px-14 mb-32 block font-yusei-magic">ぶんたん</a></li>
                 <li class="menu-list"><a href="#"
@@ -282,12 +282,13 @@
                         class=" text-stone-600 text-5xl py-10 px-24 block hover:text-orange-300">
                         <i class="material-icons text-teal-500 ">local_activity</i>
                         ご褒美管理</a></li>
+                <li class="flex-grow"></li>
                 <li class="menu-list"><a href="#"
                         class=" text-stone-600 text-5xl py-10 px-24 mt-96 block hover:text-orange-300">
                         <i class="material-icons text-teal-500 ">settings</i>
                         設定</a></li>
                 <li class="menu-list"><a href="#"
-                        class=" text-stone-600 text-5xl py-10 px-24 block hover:text-orange-300">
+                        class=" text-stone-600 text-5xl py-10 px-24 mb-32 block hover:text-orange-300">
                         <i class="material-icons text-teal-500 ">logout</i>
                         ログアウト</a></li>
             </ul>
