--- a/frontend/src/html/user/tasks/task_info.html
+++ b/frontend/src/html/user/tasks/task_info.html
@@ -75,13 +75,9 @@
 
             <!-- メニューオーバーレイ -->
             <nav>
-                <ul class="menu text-left">
+                <ul class="menu text-left lex-1 flex flex-col">
                     <li class="menu-list"><a href="#"
                             class="text-9xl text-teal-500 pt-24 pb-2 px-14 mb-32 block font-yusei-magic">ぶんたん</a></li>
-                    <li class="menu-list"><a href="#"
-                            class=" text-stone-600 text-5xl py-10 px-24 block hover:text-orange-300">
-                            <i class="material-icons text-teal-500 ">calendar_month</i>
-                            予定管理</a></li>
                     <li class="menu-list"><a href="#"
                             class=" text-stone-600 text-5xl py-10 px-24 block hover:text-orange-300">
                             <i class="material-icons text-teal-500 ">new_releases</i>
@@ -94,16 +90,13 @@
                             class=" text-stone-600 text-5xl py-10 px-24 block hover:text-orange-300">
                             <i class="material-icons text-teal-500 ">group</i>
                             グループ管理</a></li>
+                    <li class="flex-grow"></li>
                     <li class="menu-list"><a href="#"
                             class=" text-stone-600 text-5xl py-10 px-24 block hover:text-orange-300">
-                            <i class="material-icons text-teal-500 ">local_activity</i>
-                            ご褒美管理</a></li>
-                    <li class="menu-list"><a href="#"
-                            class=" text-stone-600 text-5xl py-10 px-24 mt-96 block hover:text-orange-300">
                             <i class="material-icons text-teal-500 ">settings</i>
                             設定</a></li>
                     <li class="menu-list"><a href="#"
-                            class=" text-stone-600 text-5xl py-10 px-24 block hover:text-orange-300">
+                            class=" text-stone-600 text-5xl py-10 px-24 mb-32 block hover:text-orange-300">
                             <i class="material-icons text-teal-500 ">logout</i>
                             ログアウト</a></li>
                 </ul>
@@ -146,7 +139,7 @@
                     <p class="leading-normal tracking-widest" id="task-message">タスクに対するメッセージを表示</p>
                 </div>
             </div>
-            <!-- ボタン　-->>
+            <!-- ボタン　-->
             <div class="flex justify-between">
                 <button class="back-btn text-center mr-20">戻る</button>
                 <button class="end-btn text-center">終わり</button>
